# yt-channel-download

./: .copier-answers.yml  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  pyproject.toml
.github/workflows/: docker-release.yml  pr-quality-checks.yml  pr-tag-check.yml
docs/: channel_id_setup.md  github_actions.md  google_oauth_setup.md  lock.md
src/: client_factory.py  config.py  db.py  google_oauth_client.py  lock_context.py  main.py  repository.py  settings.py  youtube_client.py  yt_api.py
src/commands/: __init__.py  auth_command.py  redownload_command.py  status_command.py
src/models/: __init__.py  scan_mode.py  stream.py  stream_status.py  video_info.py
src/notifications/: discord_notifier.py
src/pipeline/: __init__.py  base_pipeline.py  cleanup.py  cleanup_pipeline.py  discover.py  discover_pipeline.py  download.py  download_pipeline.py  pipeline_orchestrator.py  recover.py  recover_pipeline.py  single_video_orchestrator.py  thumbs.py  thumbs_pipeline.py  upload.py  upload_pipeline.py
src/repository/: stream_repository.py
src/utils/: already_running_error.py  lock_manager.py  locking.py  logging.py  logging_config.py  path_manager.py  paths.py  stale_lock_error.py
stubs/mizu_common/: __init__.pyi  google_drive_provider.pyi
tests/: conftest.py  test_client_factory.py  test_config.py  test_db.py  test_google_oauth_client.py  test_lock_context.py  test_main.py  test_repository.py  test_settings.py  test_stream_repository.py  test_youtube_client.py  test_yt_api.py
tests/commands/: __init__.py  test_auth_command.py  (+2 more)
(+28 files in other folders)
